--- a/pympress/share/xml/time_report_dialog.glade
+++ b/pympress/share/xml/time_report_dialog.glade
@@ -48,7 +48,6 @@
                 </child>
                 <child>
                   <object class="GtkTreeViewColumn" id="name_renderer">
-                    <property name="fixed_width">500</property>
                     <property name="title" translatable="yes">name</property>
                     <property name="expand">True</property>
                     <child>
@@ -61,7 +60,7 @@
                 </child>
                 <child>
                   <object class="GtkTreeViewColumn" id="time_renderer">
-                    <property name="fixed_width">60</property>
+                    <property name="min_width">60</property>
                     <property name="title" translatable="yes">time</property>
                     <child>
                       <object class="GtkCellRendererText"/>
@@ -73,7 +72,7 @@
                 </child>
                 <child>
                   <object class="GtkTreeViewColumn" id="duration_renderer">
-                    <property name="fixed_width">60</property>
+                    <property name="min_width">60</property>
                     <property name="title" translatable="yes">duration</property>
                     <child>
                       <object class="GtkCellRendererText"/>
@@ -85,7 +84,7 @@
                 </child>
                 <child>
                   <object class="GtkTreeViewColumn" id="page_renderer">
-                    <property name="fixed_width">60</property>
+                    <property name="min_width">60</property>
                     <property name="title" translatable="yes">slide</property>
                     <child>
                       <object class="GtkCellRendererText"/>
