Right-aligh last column of timing report

--- a/pympress/share/xml/time_report_dialog.glade
+++ b/pympress/share/xml/time_report_dialog.glade
@@ -87,7 +87,9 @@
                     <property name="min_width">60</property>
                     <property name="title" translatable="yes">slide</property>
                     <child>
-                      <object class="GtkCellRendererText"/>
+                      <object class="GtkCellRendererText">
+                        <property name="xalign">1</property>
+                      </object>
                       <attributes>
                         <attribute name="text">3</attribute>
                       </attributes>
