--- a/pympress/share/xml/highlight.glade
+++ b/pympress/share/xml/highlight.glade
@@ -9,7 +9,7 @@
     <property name="step-increment">1</property>
     <property name="page-increment">1</property>
   </object>
-  <object class="GtkOffscreenWindow" id="off_render">
+  <object class="GtkOffscreenWindow" id="scribble_off_render">
     <property name="can-focus">False</property>
     <child>
       <object class="GtkBox" id="scribble_overlay">
