Show visual feedback on hovering slides with mouse
In the style of a button hover, i.e. showing a border.

--- a/pympress/share/css/default.css
+++ b/pympress/share/css/default.css
@@ -96,8 +96,6 @@
   to { opacity: 0; }
 }
 
-#MenuBar,
-#MenuBar * {
-}
-#MenuBar *:hover {
+.grid-frame > *:hover {
+  border-color: @theme_selected_bg_color;
 }
