--- a/pympress/share/xml/deck.glade
+++ b/pympress/share/xml/deck.glade
@@ -44,9 +44,11 @@
                         <property name="visible">True</property>
                         <property name="app-paintable">True</property>
                         <property name="can-focus">True</property>
-                        <property name="events">GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK | GDK_STRUCTURE_MASK | GDK_TOUCH_MASK</property>
+                        <property name="events">GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK | GDK_ENTER_NOTIFY_MASK | GDK_LEAVE_NOTIFY_MASK | GDK_STRUCTURE_MASK | GDK_TOUCH_MASK</property>
                         <signal name="button-release-event" handler="on_deck_click" swapped="no"/>
                         <signal name="draw" handler="on_deck_draw" swapped="no"/>
+                        <signal name="enter-notify-event" handler="on_deck_hover" swapped="no"/>
+                        <signal name="leave-notify-event" handler="on_deck_hover" swapped="no"/>
                         <signal name="touch-event" handler="on_deck_click" swapped="no"/>
                       </object>
                     </child>
