--- a/pympress/share/xml/highlight.glade
+++ b/pympress/share/xml/highlight.glade
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.38.2 -->
+<!-- Generated with glade 3.40.0 -->
 <interface>
   <requires lib="gtk+" version="3.4"/>
   <object class="GtkAdjustment" id="scribble_width_adjust">
-    <property name="lower">2</property>
-    <property name="upper">90</property>
-    <property name="value">8</property>
-    <property name="step-increment">1</property>
+    <property name="lower">0</property>
+    <property name="upper">2</property>
+    <property name="value">.9</property>
+    <property name="step-increment">.1</property>
     <property name="page-increment">1</property>
   </object>
   <object class="GtkOffscreenWindow" id="scribble_off_render">
