Add compact mode setting and shortcut

--- a/pympress/share/xml/shortcuts.glade
+++ b/pympress/share/xml/shortcuts.glade
@@ -137,6 +137,14 @@
             <property name="title" translatable="yes">Additional features</property>
 
             <child>
+              <object class="GtkShortcutsShortcut" id="shortcut_compact_mode">
+                <property name="visible">1</property>
+                <property name="accelerator">c</property>
+                <property name="title" translatable="yes">Toggle compact mode</property>
+              </object>
+            </child>
+
+            <child>
               <object class="GtkShortcutsShortcut" id="shortcut_annotations">
                 <property name="visible">1</property>
                 <property name="accelerator">a</property>
