Add hide-menu shortut to shortcut window

--- a/pympress/share/xml/shortcuts.glade
+++ b/pympress/share/xml/shortcuts.glade
@@ -137,14 +137,6 @@
             <property name="title" translatable="yes">Additional features</property>
 
             <child>
-              <object class="GtkShortcutsShortcut" id="shortcut_compact_mode">
-                <property name="visible">1</property>
-                <property name="accelerator">c</property>
-                <property name="title" translatable="yes">Toggle compact mode</property>
-              </object>
-            </child>
-
-            <child>
               <object class="GtkShortcutsShortcut" id="shortcut_annotations">
                 <property name="visible">1</property>
                 <property name="accelerator">a</property>
@@ -221,6 +213,22 @@
                 <property name="visible">1</property>
                 <property name="accelerator">d</property>
                 <property name="title" translatable="yes">Show deck overview</property>
+              </object>
+            </child>
+
+            <child>
+              <object class="GtkShortcutsShortcut" id="shortcut_compact_mode">
+                <property name="visible">1</property>
+                <property name="accelerator">c</property>
+                <property name="title" translatable="yes">Toggle compact mode</property>
+              </object>
+            </child>
+
+            <child>
+              <object class="GtkShortcutsShortcut" id="shortcut_hide_menu">
+                <property name="visible">1</property>
+                <property name="accelerator">&lt;ctrl&gt;m</property>
+                <property name="title" translatable="yes">Toggle menu visibility</property>
               </object>
             </child>
 
